--- a/index.html
+++ b/index.html
@@ -90,14 +90,27 @@
 
         #content {
             text-align: justify;
-            margin-left: 300px;
-            margin-right: 300px;
+            /* margin-left: 300px;
+            margin-right: 300px; */
+            margin-left: 20%;
+            margin-right: 20%;
         }
 
-        #content {
-            text-align: justify;
-            margin-left: 300px;
-            margin-right: 300px;
+        @media only screen and (max-width: 1000px) {
+            h1 {
+                font-size: 20vw;
+                line-height: 22vw;
+            }
+            p {
+                font-size: 3vw;
+            }
+            button {
+                font-size: 5vw;
+            }
+            #content {
+                margin-left: 1%;
+                margin-right: 1%;
+            }
         }
     </style>
 
