--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             }
             button {
                 font-size: 5vw;
+                padding: 1vw;
             }
             #content {
                 margin-left: 1%;
