maybe maybe maybe

--- a/index.html
+++ b/index.html
@@ -101,16 +101,23 @@
                 font-size: 20vw;
                 line-height: 22vw;
             }
+
             p {
-                font-size: 3vw;
+                font-size: 4vw;
             }
+
             button {
                 font-size: 5vw;
                 padding: 1vw;
             }
+
+            .gamesgif {
+                width: 98%
+            }
+
             #content {
-                margin-left: 1%;
-                margin-right: 1%;
+                margin-left: 5%;
+                margin-right: 5%;
             }
         }
     </style>
@@ -194,17 +201,17 @@
             <br>
             <p>CalcGames</p>
             <a href="https://nitroguy10.github.io/CalcGames/"><img src="gif/serpent.gif" alt="Serpent"
-                    style="max-width:322px" /><img src="gif/matrix.gif" alt="Matrix Racer"
-                    style="max-width:322px" /></a>
+                    style="max-width:322px" class="gamesgif"/><img src="gif/matrix.gif" alt="Matrix Racer"
+                    style="max-width:322px" class="gamesgif"/></a>
             <p>Dodge3</p>
             <a href="https://nitroguy10.github.io/Dodge3/"><img src="gif/dodge3.gif" alt="Dodge3"
-                    style="max-width:496px" /></a>
+                    style="max-width:496px" class="gamesgif"/></a>
             <p>Jumpy</p>
             <a href="https://nitroguy10.github.io/Jumpy/"><img src="gif/jumpy.gif" alt="Jumpy"
-                    style="max-width:496px" /></a>
+                    style="max-width:496px" class="gamesgif"/></a>
             <p>Smiley (This one especially sucks)</p>
             <a href="https://nitroguy10.github.io/Smiley/"><img src="gif/smiley.gif" alt="Smiley"
-                    style="max-width:514px" /></a>
+                    style="max-width:514px" class="gamesgif"/></a>
         </div>
         <div id="random">
             <p><a href="https://nitroguy10.github.io/ResistorTool/">ResistorTool</a></p>
