--- a/index.html
+++ b/index.html
@@ -34,7 +34,23 @@
             padding-bottom: 20px;
         }
 
+        h2.noscript_heading {
+            font-size: 60px;
+            line-height: 20px;
+            margin: 0px;
+            padding-bottom: 20px;
+            text-align: center;
+        }
+
+        hr.noscript_hr {
+            margin-bottom: 40px;
+        }
+
         p {
+            font-size: 30px;
+        }
+
+        li {
             font-size: 30px;
         }
 
@@ -55,7 +71,11 @@
         }
 
         a:visited {
-            color: #6633FF;
+            color: #5544FF;
+        }
+
+        .csv {
+            font-size: 18px;
         }
 
         #email {
@@ -127,21 +147,17 @@
         const tabs = ["#about", "#music", "#games", "#random"]
 
         function openTab(page, start) {
-            if (location.hash === tabs[page] && !start)
-            {
-                location.hash = "#about"
-                location.reload()
+            if (location.hash === tabs[page] && !start) {
+                /*location.hash = "#about"
+                location.reload()*/
                 return
             }
             location.hash = tabs[page]
-            for (let i = 0; i < tabs.length; i++)
-            {
-                if (i === page)
-                {
+            for (let i = 0; i < tabs.length; i++) {
+                if (i === page) {
                     w3.show(tabs[i])
                 }
-                else
-                {
+                else {
                     w3.hide(tabs[i])
                 }
 
@@ -149,12 +165,10 @@
         }
 
         function start() {
-            if (location.hash === "" || tabs.indexOf(location.hash) === -1)
-            {
+            if (location.hash === "" || tabs.indexOf(location.hash) === -1) {
                 openTab(0, true)
             }
-            else
-            {
+            else {
                 openTab(tabs.indexOf(location.hash), true)
             }
         }
@@ -174,6 +188,9 @@
     </p>
     <div id="content">
         <div id="about">
+            <noscript>
+                <h2 class="noscript_heading">About</h2>
+            </noscript>
             <p>Hi there!</p>
             <p>I'm NitroGuy. Currently, I am a human who lives on Earth. My hobbies include programming, building
                 circuits, playing video games, producing music, and sleeping.</p>
@@ -182,38 +199,69 @@
                 scripting languages such as Unity-C# and Godot's GDScript. I've only had a little bit of experience with
                 building simple circuits to manipulate with microcontrollers but I'm already in love.</p>
             <p>Video games have been a massive part of my life but I find myself playing them less and less due to lack
-                of time. Some of my all-time favorites are Rollercoaster Tycoon 2, Minecraft (of course), Factorio, and
+                of time. Some of my all-time favorites are Rollercoaster Tycoon 2, Minecraft (of course), Factorio,
+                Terraria, and
                 Team Fortress 2. As of the time of writing this, I am currently playing a lot of osu! and Overwatch.</p>
             <p>I am chronically addicted to music. I love playing, producing, and listening to music. I've loved a
-                variety of genres over the years but, right now, I am most fixated on Dubstep and EDM.</p>
+                variety of genres over the years but, right now, I am most fixated on Dubstep and EDM. I have a very,
+                very weird music brain. I started taking piano lessons at age 6 and was a pretty great student for the
+                first couple of years. At a certain point, however, I kind of got sick of practicing. I would never
+                practice but instead opt to doodle around and improvise or try to play songs I had heard on the radio by
+                ear. I have perfect pitch and can transcribe and play by ear super easily and I consider myself very
+                lucky for having that ability. I eventually quit lessons but, ironically, I started playing piano much
+                more after that since I was free to doodle and compose without fear of my teacher scolding me for not
+                learning my assigned music. I don't think that music education puts nearly as much emphasis on
+                composition as it should. Music production quickly became one of my main hobbies and one of the things I
+                feel happiest doing. I'm much happier being a music producer than a pianist.</p>
         </div>
+        <noscript>
+            <hr class="noscript_hr"></noscript>
         <div id="music">
+            <noscript>
+                <h2 class="noscript_heading">Music</h2>
+            </noscript>
             <img src="icons/sm.png" id="monkey" align="right">
             <p>I produce EDM under the alias "SassyMonkey".</p>
-            <p>My portfolio is pretty garbage at the moment but, trust me, I have some cool stuff in the works lol</p>
             <p>If you wanna have a listen, check me out on <a
                     href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ">YouTube</a> and <a
                     href="https://soundcloud.com/nitroguy10">SoundCloud</a></p>
+            <p>Or, if you'd prefer, read about story behind each of my tracks (and download them too).</p>
+            <ul>
+                <li><a href="pages/candy_fractals_ep.html">Candy Fractals EP</a></li>
+                <li><a href="pages/older_tracks.html">Older Tracks</a></li>
+                <br>
+                <a href="pages/song_data_csv.html" class="csv">CSV file with all song info</a>
+            </ul>
         </div>
+        <noscript>
+            <hr class="noscript_hr"></noscript>
         <div id="games">
+            <noscript>
+                <h2 class="noscript_heading">Games</h2>
+            </noscript>
             <p>These games are kinda bad.</p>
             <p>Don't waste your time playing 'em.</p>
             <br>
             <p>CalcGames</p>
             <a href="https://nitroguy10.github.io/CalcGames/"><img src="gif/serpent.gif" alt="Serpent"
-                    style="max-width:322px" class="gamesgif"/><img src="gif/matrix.gif" alt="Matrix Racer"
-                    style="max-width:322px" class="gamesgif"/></a>
+                    style="max-width:322px" class="gamesgif" /><img src="gif/matrix.gif" alt="Matrix Racer"
+                    style="max-width:322px" class="gamesgif" /></a>
             <p>Dodge3</p>
             <a href="https://nitroguy10.github.io/Dodge3/"><img src="gif/dodge3.gif" alt="Dodge3"
-                    style="max-width:496px" class="gamesgif"/></a>
+                    style="max-width:496px" class="gamesgif" /></a>
             <p>Jumpy</p>
-            <a href="https://nitroguy10.github.io/Jumpy/"><img src="gif/jumpy.gif" alt="Jumpy"
-                    style="max-width:496px" class="gamesgif"/></a>
+            <a href="https://nitroguy10.github.io/Jumpy/"><img src="gif/jumpy.gif" alt="Jumpy" style="max-width:496px"
+                    class="gamesgif" /></a>
             <p>Smiley (This one especially sucks)</p>
             <a href="https://nitroguy10.github.io/Smiley/"><img src="gif/smiley.gif" alt="Smiley"
-                    style="max-width:514px" class="gamesgif"/></a>
+                    style="max-width:514px" class="gamesgif" /></a>
         </div>
+        <noscript>
+            <hr class="noscript_hr"></noscript>
         <div id="random">
+            <noscript>
+                <h2 class="noscript_heading">Random</h2>
+            </noscript>
             <p><a href="https://nitroguy10.github.io/ResistorTool/">ResistorTool</a></p>
             <p><a href="pages/roboplato.html">Neural Network Trained on Plato's Works</a></p>
             <p><a href="https://nitroguy10.github.io/ClickType/">ClickType</a></p>
