replaceAll() should actually work now

--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
                 building simple circuits to manipulate with microcontrollers but I'm already in love.</p>
             <p>Video games have been a massive part of my life but I find myself playing them less and less due to lack
                 of time. Some of my all-time favorites are Rollercoaster Tycoon 2, Minecraft (of course), Factorio,
-                Terraria, and
-                Team Fortress 2. As of the time of writing this, I am currently playing a lot of osu! and Overwatch.</p>
+                Terraria, Team Fortress 2, and Black Mesa. As of the time of writing this, I am currently playing a lot of Overwatch.</p>
             <p>I am chronically addicted to music. I love playing, producing, and listening to music. I've loved a
                 variety of genres over the years but, right now, I am most fixated on Dubstep and EDM. I have a very,
                 very weird music brain. I started taking piano lessons at age 6 and was a pretty great student for the
