--- a/index.html
+++ b/index.html
@@ -202,16 +202,7 @@
                 of time. Some of my all-time favorites are Rollercoaster Tycoon 2, Minecraft (of course), Factorio,
                 Terraria, Team Fortress 2, and Black Mesa. As of the time of writing this, I am currently playing a lot of Overwatch.</p>
             <p>I am chronically addicted to music. I love playing, producing, and listening to music. I've loved a
-                variety of genres over the years but, right now, I am most fixated on Dubstep and EDM. I have a very,
-                very weird music brain. I started taking piano lessons at age 6 and was a pretty great student for the
-                first couple of years. At a certain point, however, I kind of got sick of practicing. I would never
-                practice but instead opt to doodle around and improvise or try to play songs I had heard on the radio by
-                ear. I have perfect pitch and can transcribe and play by ear super easily and I consider myself very
-                lucky for having that ability. I eventually quit lessons but, ironically, I started playing piano much
-                more after that since I was free to doodle and compose without fear of my teacher scolding me for not
-                learning my assigned music. I don't think that music education puts nearly as much emphasis on
-                composition as it should. Music production quickly became one of my main hobbies and one of the things I
-                feel happiest doing. I'm much happier being a music producer than a pianist.</p>
+                variety of genres over the years but, right now, I am most fixated on Dubstep and EDM.</p>
         </div>
         <noscript>
             <hr class="noscript_hr"></noscript>
@@ -220,7 +211,7 @@
                 <h2 class="noscript_heading">Music</h2>
             </noscript>
             <img src="icons/sm.png" id="monkey" align="right">
-            <p>I produce EDM under the alias "SassyMonkey".</p>
+            <p>I produce EDM under the alias "The Sass".</p>
             <p>If you wanna have a listen, check me out on <a
                     href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ">YouTube</a> and <a
                     href="https://soundcloud.com/nitroguy10">SoundCloud</a></p>
