Big 'ol update. Static site generator coming soon :eyes:

--- a/links_to.html
+++ b/links_to.html
@@ -6,8 +6,8 @@
     <title>NitroGuy</title>
 
     <meta charset="UTF-8">
-    <meta name="description" content="SassyMonkey's Older Tracks">
-    <meta name="author" content="NitroGuy/NitroGuy10/SassyMonkey">
+    <meta name="description" content="The Sass's Older Tracks">
+    <meta name="author" content="NitroGuy/NitroGuy10/The Sass">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
@@ -348,7 +348,7 @@
 </head>
 
 <body onload="populate()" onhashchange="location.reload()">
-    <h1>SassyMonkey</h1>
+    <h1>The Sass</h1>
     <div id="content">
         <noscript>
             <p>Darn.</p>
@@ -373,7 +373,7 @@
     <footer>
         <a href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ"><img src="icons/youtube_social_icon_red2.png"
                 height="32px" width="32px" title="YouTube" alt="YouTube"></a>
-        <a href="https://soundcloud.com/nitroguy10"><img src="icons/orange_transparent_32-94fc761.png" height="32px"
+        <a href="https://soundcloud.com/the-sass-music"><img src="icons/orange_transparent_32-94fc761.png" height="32px"
                 width="32px" title="SoundCloud" alt="SoundCloud"></a>
         <a href="https://github.com/NitroGuy10"><img src="icons/GitHub-Mark-Light-120px-plus2.png" height="32px"
                 width="32px" title="GitHub" alt="GitHub"></a>
@@ -381,7 +381,7 @@
                 title="Twitter" alt="Twitter"></a>
         <div id="email" title="E-Mail">nitroguysm(at)gmail.com</div>
     </footer>
-    <footer id="copyright">© 2020 NitroGuy</footer>
+    <footer id="copyright">© 2021 NitroGuy</footer>
 </body>
 
 </html>
