--- a/pages/song_data_csv.html
+++ b/pages/song_data_csv.html
@@ -23,7 +23,7 @@
     <script src="../js/song_data.js"></script>
     <script>
         const content = ["Collection"]
-        const fileName = "sassymonkey_song_data.csv"
+        const fileName = "the_sass_song_data.csv"
 
         for (let field in fieldNames)
         {
