--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8">
     <meta name="description" content="NitroGuy's Website">
-    <meta name="author" content="NitroGuy/NitroGuy10/SassyMonkey">
+    <meta name="author" content="NitroGuy/NitroGuy10/The Sass">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" href="/favicon.ico">
@@ -73,6 +73,10 @@
 
         a:visited {
             color: #5544FF;
+        }
+
+        a.whitelink {
+            color: inherit;
         }
 
         .csv {
@@ -201,46 +205,55 @@
                 <h2 class="noscript_heading">About</h2>
             </noscript>
             <p>Hi there!</p>
-            <p>I'm NitroGuy. Currently, I am a human who lives on Earth. My hobbies include programming, producing music, playing video games, and sleeping.</p>
+            <p>I'm NitroGuy. Currently, I am a human who lives on Earth. My hobbies include programming, producing
+                music, editing videos, playing video games, and sleeping.</p>
             <p>I am highly interested in computer science and software development. Recently, I've been working a lot
-                with Processing and making cool graphical things&mdash;something I've never really done before. I am
-                quite competent
-                with Java but reeeeally need to branch out more. I've dabbled in JavaScript as well as some game engine
-                scripting languages such as Unity-C# and Godot's GDScript. I've only had a little bit of experience with
+                with Processing and making cool graphical things&mdash;something I've never really done before. Java is
+                without a doubt my best language, but I reeeeally need to branch out more. I've dabbled in
+                JavaScript as well as some game engine
+                scripting languages such as Unity-C# and Godot's GDScript. I also have the teeny tiniest bit of C++
+                knowledge. I've only had a little bit of experience with
                 building simple circuits to manipulate with microcontrollers but I'm already in love.</p>
             <p>Video games have been a massive part of my life but I find myself playing them less and less due to lack
-                of time. Some of my all-time favorites are Rollercoaster Tycoon 2, Minecraft (of course), Factorio,
-                Terraria, Team Fortress 2, Black Mesa, and Undertale. As of the time of writing this, I am currently playing a lot
+                of time. Some of my all-time favorites include, Minecraft (of course), Factorio,
+                Terraria, Team Fortress 2, and <a href="pages/favorite_games.html" class="whitelink">more</a>. As of the
+                time of writing this, I am currently playing a lot
                 of osu! and Overwatch.</p>
             <p>I am chronically addicted to music. I love playing, producing, and listening to music. I've loved a
-                variety of genres over the years but, right now, I am most fixated on Dubstep and EDM in general.</p>
+                variety of genres over the years but right now I am most fixated on Dubstep and EDM in general.</p>
+            <p>he/him</p>
         </div>
         <noscript>
-            <hr class="noscript_hr"></noscript>
+            <hr class="noscript_hr">
+        </noscript>
         <div id="music">
             <noscript>
                 <h2 class="noscript_heading">Music</h2>
             </noscript>
             <img src="icons/sass_tiny.png" id="monkey" align="right">
-            <p>I produce EDM under the alias "The Sass".</p>
+            <p>I produce EDM under the alias "The Sass". My music is all about emotion, fun, and taking the listener on a journey. It's also chock-full of lead solos and major 7s lol</p>
             <p>If you wanna have a listen, check me out on <a
                     href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ">YouTube</a> and <a
-                    href="https://soundcloud.com/nitroguy10">SoundCloud</a></p>
+                    href="https://soundcloud.com/the-sass-music">SoundCloud</a></p>
             <p>Or, if you'd prefer, read about story behind each of my tracks (and download them too).</p>
             <ul>
+                <li><a href="pages/figment_remix.html">Neddie - Figment (The Sass Remix)</a></li>
+                <li><a href="pages/jump.html">Jump</a></li>
                 <li><a href="pages/candy_fractals_ep.html">Candy Fractals EP</a></li>
                 <li><a href="pages/older_tracks.html">Older Tracks</a></li>
                 <br>
-                <a href="pages/song_data_csv.html" class="csv">CSV file with all song info</a>
+                <!-- <a href="pages/song_data_csv.html" class="csv">CSV file with all song info</a> -->
             </ul>
         </div>
         <noscript>
-            <hr class="noscript_hr"></noscript>
+            <hr class="noscript_hr">
+        </noscript>
         <div id="games">
             <noscript>
                 <h2 class="noscript_heading">Games</h2>
             </noscript>
-            <p>These games are kinda bad.</p>
+            <p>This page is under construction! &gt;_&lt;</p>
+            <!--  <p>These games are kinda bad.</p>
             <p>Don't waste your time playing 'em.</p>
             <br>
             <p>CalcGames</p>
@@ -255,10 +268,11 @@
                     class="gamesgif" /></a>
             <p>Smiley (This one especially sucks)</p>
             <a href="https://nitroguy10.github.io/Smiley/"><img src="gif/smiley.gif" alt="Smiley"
-                    style="max-width:514px" class="gamesgif" /></a>
+                    style="max-width:514px" class="gamesgif" /></a> -->
         </div>
         <noscript>
-            <hr class="noscript_hr"></noscript>
+            <hr class="noscript_hr">
+        </noscript>
         <div id="random">
             <noscript>
                 <h2 class="noscript_heading">Random</h2>
@@ -271,7 +285,7 @@
     <footer>
         <a href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ"><img src="icons/youtube_social_icon_red2.png"
                 height="32px" width="32px" title="YouTube" alt="YouTube"></a>
-        <a href="https://soundcloud.com/nitroguy10"><img src="icons/orange_transparent_32-94fc761.png" height="32px"
+        <a href="https://soundcloud.com/the-sass-music"><img src="icons/orange_transparent_32-94fc761.png" height="32px"
                 width="32px" title="SoundCloud" alt="SoundCloud"></a>
         <a href="https://github.com/NitroGuy10"><img src="icons/GitHub-Mark-Light-120px-plus2.png" height="32px"
                 width="32px" title="GitHub" alt="GitHub"></a>
